maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:21: error: Unit does not take parameters
  gauche()()
          ^Escaper:23: error: Unit does not take parameters
    droite()()
            ^Escaper:27: error: Unit does not take parameters
      droite()()
              ^Escaper:29: error: Unit does not take parameters
        droite()()
                ^